<resources>
    <string name="app_name">DonorPets</string>
    <string name="home">홈</string>
    <string name="shelter">보호소</string>
    <string name="mypage">마이페이지</string>
    <string name="setting">환경설정</string>
    <string name="donation">기부하기</string>
    <string name="story">스토리</string>

    // story
    <string name="add_comment">게시</string>
    <string name="add_comment_hint">댓글달기</string>
    <string name="like_count">%d명이 응원합니다</string>

    // shelter profile
    <string name="button_donation">이 보호소에 기부하기</string>
    <string name="item_story">스토리</string>
    <string name="item_donor">후원자</string>
    <string name="item_like">관심</string>
    <string name="item_product">기부품목</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
