<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="kr.hs.emirim.sookhee.redonorpets.domain.entity.Story" />

        <variable
            name="story"
            type="Story" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.story.StoryDetailActivity">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_back_black"
            app:layout_constraintBottom_toBottomOf="@id/tvTopbarTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTopbarTitle" />

        <TextView
            android:id="@+id/tvTopbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/notosanscjkkr_medium"
            android:includeFontPadding="false"
            android:text="@string/story"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/tobbarGuideLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/tobbarGuideLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/commentLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tobbarGuideLine">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.loopeer.shadow.ShadowView
                    android:id="@+id/shadow_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shadowColor="#26000000"
                    app:shadowDy="2"
                    app:shadowMargin="16dp"
                    app:shadowRadius="4dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivShelterProfile"
                        android:layout_width="35dp"
                        android:layout_height="35dp" />

                </com.loopeer.shadow.ShadowView>

                <TextView
                    android:id="@+id/tvShelterName"
                    android:layout_width="108dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/notosanscjkkr_medium"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="6sp"
                    android:onClick="onShelterProfileClick"
                    android:text="@{story.shelterName}"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    app:layout_constraintStart_toEndOf="@+id/shadow_view"
                    app:layout_constraintTop_toTopOf="@+id/shadow_view"
                    tools:text="도너츠 유기견 보호소" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/notosanscjkkr_regular"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="4.5sp"
                    android:text="@{story.updateDate}"
                    android:textColor="@color/greyish"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/shadow_view"
                    app:layout_constraintStart_toEndOf="@+id/shadow_view"
                    tools:text="2022.01.23" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/notosanscjkkr_bold"
                    android:includeFontPadding="false"
                    android:text="@{story.title}"
                    android:textColor="@color/black"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/shadow_view"
                    tools:text="도너츠 보호소에\n많은 기부 감사합니다!" />

                <View
                    android:id="@+id/titleGuideLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="@color/greyish"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle" />

                <LinearLayout
                    android:id="@+id/storyContentContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleGuideLine" />

                <Button
                    android:id="@+id/btnLike"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/icon_like_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/storyContentContainer" />

                <TextView
                    android:id="@+id/tvLikeCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/btnLike"
                    app:layout_constraintStart_toEndOf="@id/btnLike"
                    app:layout_constraintTop_toTopOf="@id/btnLike"
                    tools:text="000명이 응원합니다!" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLike"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_comment" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/commentLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUserProfile"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@color/greyish" />

            <EditText
                android:id="@+id/etComment"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/chat_background"
                android:ems="10"
                android:fontFamily="@font/notosanscjkkr_regular"
                android:hint="@string/add_comment_hint"
                android:includeFontPadding="false"
                android:paddingHorizontal="16dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/btnAddComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosanscjkkr_regular"
                android:text="@string/add_comment"
                android:textColor="@color/deep_sky_blue"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>